update train unc baseline

--- a/notebooks/test_result_analysis.ipynb
+++ b/notebooks/test_result_analysis.ipynb
@@ -387,6 +387,253 @@
     "print(state_dict['fc.bias'])\n",
     "print(state_dict['fc.weight'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not working cn15k, transe logi 128: 0.01 \n",
+      "####### Working cn15k, transe logi 256: 0.01 \n",
+      "Not working cn15k, transe logi 512: 0.01 \n",
+      "Not working cn15k, transe logi 128: 0.005 \n",
+      "####### Working cn15k, transe logi 256: 0.005 \n",
+      "Not working cn15k, transe logi 512: 0.005 \n",
+      "####### Working cn15k, transe logi 128: 0.001 \n",
+      "Not working cn15k, transe logi 256: 0.001 \n",
+      "Not working cn15k, transe logi 512: 0.001 \n",
+      "Not working cn15k, transe rect 128: 0.01 \n",
+      "Not working cn15k, transe rect 256: 0.01 \n",
+      "####### Working cn15k, transe rect 512: 0.01 \n",
+      "####### Working cn15k, transe rect 128: 0.005 \n",
+      "Not working cn15k, transe rect 256: 0.005 \n",
+      "####### Working cn15k, transe rect 512: 0.005 \n",
+      "Not working cn15k, transe rect 128: 0.001 \n",
+      "Not working cn15k, transe rect 256: 0.001 \n",
+      "####### Working cn15k, transe rect 512: 0.001 \n",
+      "Not working nl27k, transe logi 128: 0.01 \n",
+      "Not working nl27k, transe logi 256: 0.01 \n",
+      "Not working nl27k, transe logi 512: 0.01 \n",
+      "Not working nl27k, transe logi 128: 0.005 \n",
+      "####### Working nl27k, transe logi 256: 0.005 \n",
+      "Not working nl27k, transe logi 512: 0.005 \n",
+      "Not working nl27k, transe logi 128: 0.001 \n",
+      "Not working nl27k, transe logi 256: 0.001 \n",
+      "Not working nl27k, transe logi 512: 0.001 \n",
+      "Not working nl27k, transe rect 128: 0.01 \n",
+      "####### Working nl27k, transe rect 256: 0.01 \n",
+      "Not working nl27k, transe rect 512: 0.01 \n",
+      "Not working nl27k, transe rect 128: 0.005 \n",
+      "####### Working nl27k, transe rect 256: 0.005 \n",
+      "####### Working nl27k, transe rect 512: 0.005 \n",
+      "####### Working nl27k, transe rect 128: 0.001 \n",
+      "####### Working nl27k, transe rect 256: 0.001 \n",
+      "####### Working nl27k, transe rect 512: 0.001 \n",
+      "####### Working ppi5k, transe logi 128: 0.01 \n",
+      "####### Working ppi5k, transe logi 256: 0.01 \n",
+      "####### Working ppi5k, transe logi 512: 0.01 \n",
+      "####### Working ppi5k, transe logi 128: 0.005 \n",
+      "Not working ppi5k, transe logi 256: 0.005 \n",
+      "Not working ppi5k, transe logi 512: 0.005 \n",
+      "####### Working ppi5k, transe logi 128: 0.001 \n",
+      "####### Working ppi5k, transe logi 256: 0.001 \n",
+      "####### Working ppi5k, transe logi 512: 0.001 \n",
+      "####### Working ppi5k, transe rect 128: 0.01 \n",
+      "####### Working ppi5k, transe rect 256: 0.01 \n",
+      "Not working ppi5k, transe rect 512: 0.01 \n",
+      "####### Working ppi5k, transe rect 128: 0.005 \n",
+      "####### Working ppi5k, transe rect 256: 0.005 \n",
+      "####### Working ppi5k, transe rect 512: 0.005 \n",
+      "####### Working ppi5k, transe rect 128: 0.001 \n",
+      "####### Working ppi5k, transe rect 256: 0.001 \n",
+      "####### Working ppi5k, transe rect 512: 0.001 \n",
+      "Not working cn15k, distmult logi 128: 0.01 \n",
+      "####### Working cn15k, distmult logi 256: 0.01 \n",
+      "Not working cn15k, distmult logi 512: 0.01 \n",
+      "####### Working cn15k, distmult logi 128: 0.005 \n",
+      "Not working cn15k, distmult logi 256: 0.005 \n",
+      "Not working cn15k, distmult logi 512: 0.005 \n",
+      "####### Working cn15k, distmult logi 128: 0.001 \n",
+      "####### Working cn15k, distmult logi 256: 0.001 \n",
+      "####### Working cn15k, distmult logi 512: 0.001 \n",
+      "Not working cn15k, distmult rect 128: 0.01 \n",
+      "Not working cn15k, distmult rect 256: 0.01 \n",
+      "Not working cn15k, distmult rect 512: 0.01 \n",
+      "Not working cn15k, distmult rect 128: 0.005 \n",
+      "####### Working cn15k, distmult rect 256: 0.005 \n",
+      "####### Working cn15k, distmult rect 512: 0.005 \n",
+      "Not working cn15k, distmult rect 128: 0.001 \n",
+      "####### Working cn15k, distmult rect 256: 0.001 \n",
+      "####### Working cn15k, distmult rect 512: 0.001 \n",
+      "Not working nl27k, distmult logi 128: 0.01 \n",
+      "Not working nl27k, distmult logi 256: 0.01 \n",
+      "Not working nl27k, distmult logi 512: 0.01 \n",
+      "Not working nl27k, distmult logi 128: 0.005 \n",
+      "Not working nl27k, distmult logi 256: 0.005 \n",
+      "Not working nl27k, distmult logi 512: 0.005 \n",
+      "Not working nl27k, distmult logi 128: 0.001 \n",
+      "Not working nl27k, distmult logi 256: 0.001 \n",
+      "####### Working nl27k, distmult logi 512: 0.001 \n",
+      "Not working nl27k, distmult rect 128: 0.01 \n",
+      "Not working nl27k, distmult rect 256: 0.01 \n",
+      "Not working nl27k, distmult rect 512: 0.01 \n",
+      "Not working nl27k, distmult rect 128: 0.005 \n",
+      "Not working nl27k, distmult rect 256: 0.005 \n",
+      "Not working nl27k, distmult rect 512: 0.005 \n",
+      "Not working nl27k, distmult rect 128: 0.001 \n",
+      "Not working nl27k, distmult rect 256: 0.001 \n",
+      "Not working nl27k, distmult rect 512: 0.001 \n",
+      "####### Working ppi5k, distmult logi 128: 0.01 \n",
+      "####### Working ppi5k, distmult logi 256: 0.01 \n",
+      "####### Working ppi5k, distmult logi 512: 0.01 \n",
+      "####### Working ppi5k, distmult logi 128: 0.005 \n",
+      "Not working ppi5k, distmult logi 256: 0.005 \n",
+      "####### Working ppi5k, distmult logi 512: 0.005 \n",
+      "####### Working ppi5k, distmult logi 128: 0.001 \n",
+      "####### Working ppi5k, distmult logi 256: 0.001 \n",
+      "####### Working ppi5k, distmult logi 512: 0.001 \n",
+      "####### Working ppi5k, distmult rect 128: 0.01 \n",
+      "####### Working ppi5k, distmult rect 256: 0.01 \n",
+      "####### Working ppi5k, distmult rect 512: 0.01 \n",
+      "####### Working ppi5k, distmult rect 128: 0.005 \n",
+      "####### Working ppi5k, distmult rect 256: 0.005 \n",
+      "####### Working ppi5k, distmult rect 512: 0.005 \n",
+      "####### Working ppi5k, distmult rect 128: 0.001 \n",
+      "Not working ppi5k, distmult rect 256: 0.001 \n",
+      "Not working ppi5k, distmult rect 512: 0.001 \n",
+      "Not working cn15k, complex logi 128: 0.01 \n",
+      "Not working cn15k, complex logi 256: 0.01 \n",
+      "Not working cn15k, complex logi 512: 0.01 \n",
+      "Not working cn15k, complex logi 128: 0.005 \n",
+      "Not working cn15k, complex logi 256: 0.005 \n",
+      "Not working cn15k, complex logi 512: 0.005 \n",
+      "Not working cn15k, complex logi 128: 0.001 \n",
+      "Not working cn15k, complex logi 256: 0.001 \n",
+      "Not working cn15k, complex logi 512: 0.001 \n",
+      "####### Working cn15k, complex rect 128: 0.01 \n",
+      "Not working cn15k, complex rect 256: 0.01 \n",
+      "####### Working cn15k, complex rect 512: 0.01 \n",
+      "Not working cn15k, complex rect 128: 0.005 \n",
+      "Not working cn15k, complex rect 256: 0.005 \n",
+      "Not working cn15k, complex rect 512: 0.005 \n",
+      "Not working cn15k, complex rect 128: 0.001 \n",
+      "Not working cn15k, complex rect 256: 0.001 \n",
+      "Not working cn15k, complex rect 512: 0.001 \n",
+      "####### Working nl27k, complex logi 128: 0.01 \n",
+      "Not working nl27k, complex logi 256: 0.01 \n",
+      "Not working nl27k, complex logi 512: 0.01 \n",
+      "Not working nl27k, complex logi 128: 0.005 \n",
+      "Not working nl27k, complex logi 256: 0.005 \n",
+      "Not working nl27k, complex logi 512: 0.005 \n",
+      "Not working nl27k, complex logi 128: 0.001 \n",
+      "Not working nl27k, complex logi 256: 0.001 \n",
+      "Not working nl27k, complex logi 512: 0.001 \n",
+      "####### Working nl27k, complex rect 128: 0.01 \n",
+      "Not working nl27k, complex rect 256: 0.01 \n",
+      "Not working nl27k, complex rect 512: 0.01 \n",
+      "Not working nl27k, complex rect 128: 0.005 \n",
+      "Not working nl27k, complex rect 256: 0.005 \n",
+      "Not working nl27k, complex rect 512: 0.005 \n",
+      "Not working nl27k, complex rect 128: 0.001 \n",
+      "Not working nl27k, complex rect 256: 0.001 \n",
+      "Not working nl27k, complex rect 512: 0.001 \n",
+      "####### Working ppi5k, complex logi 128: 0.01 \n",
+      "Not working ppi5k, complex logi 256: 0.01 \n",
+      "Not working ppi5k, complex logi 512: 0.01 \n",
+      "Not working ppi5k, complex logi 128: 0.005 \n",
+      "Not working ppi5k, complex logi 256: 0.005 \n",
+      "Not working ppi5k, complex logi 512: 0.005 \n",
+      "Not working ppi5k, complex logi 128: 0.001 \n",
+      "Not working ppi5k, complex logi 256: 0.001 \n",
+      "Not working ppi5k, complex logi 512: 0.001 \n",
+      "####### Working ppi5k, complex rect 128: 0.01 \n",
+      "Not working ppi5k, complex rect 256: 0.01 \n",
+      "Not working ppi5k, complex rect 512: 0.01 \n",
+      "Not working ppi5k, complex rect 128: 0.005 \n",
+      "Not working ppi5k, complex rect 256: 0.005 \n",
+      "####### Working ppi5k, complex rect 512: 0.005 \n",
+      "Not working ppi5k, complex rect 128: 0.001 \n",
+      "Not working ppi5k, complex rect 256: 0.001 \n",
+      "Not working ppi5k, complex rect 512: 0.001 \n",
+      "Not working cn15k, rotate logi 128: 0.01 \n",
+      "Not working cn15k, rotate logi 256: 0.01 \n",
+      "Not working cn15k, rotate logi 512: 0.01 \n",
+      "####### Working cn15k, rotate logi 128: 0.005 \n",
+      "Not working cn15k, rotate logi 256: 0.005 \n",
+      "Not working cn15k, rotate logi 512: 0.005 \n",
+      "Not working cn15k, rotate logi 128: 0.001 \n",
+      "Not working cn15k, rotate logi 256: 0.001 \n",
+      "Not working cn15k, rotate logi 512: 0.001 \n",
+      "Not working cn15k, rotate rect 128: 0.01 \n",
+      "Not working cn15k, rotate rect 256: 0.01 \n",
+      "Not working cn15k, rotate rect 512: 0.01 \n",
+      "Not working cn15k, rotate rect 128: 0.005 \n",
+      "Not working cn15k, rotate rect 256: 0.005 \n",
+      "Not working cn15k, rotate rect 512: 0.005 \n",
+      "####### Working cn15k, rotate rect 128: 0.001 \n",
+      "Not working cn15k, rotate rect 256: 0.001 \n",
+      "Not working cn15k, rotate rect 512: 0.001 \n",
+      "Not working nl27k, rotate logi 128: 0.01 \n",
+      "Not working nl27k, rotate logi 256: 0.01 \n",
+      "Not working nl27k, rotate logi 512: 0.01 \n",
+      "Not working nl27k, rotate logi 128: 0.005 \n",
+      "####### Working nl27k, rotate logi 256: 0.005 \n",
+      "Not working nl27k, rotate logi 512: 0.005 \n",
+      "Not working nl27k, rotate logi 128: 0.001 \n",
+      "####### Working nl27k, rotate logi 256: 0.001 \n",
+      "Not working nl27k, rotate logi 512: 0.001 \n",
+      "Not working nl27k, rotate rect 128: 0.01 \n",
+      "Not working nl27k, rotate rect 256: 0.01 \n",
+      "####### Working nl27k, rotate rect 512: 0.01 \n",
+      "####### Working nl27k, rotate rect 128: 0.005 \n",
+      "Not working nl27k, rotate rect 256: 0.005 \n",
+      "####### Working nl27k, rotate rect 512: 0.005 \n",
+      "Not working nl27k, rotate rect 128: 0.001 \n",
+      "Not working nl27k, rotate rect 256: 0.001 \n",
+      "Not working nl27k, rotate rect 512: 0.001 \n",
+      "Not working ppi5k, rotate logi 128: 0.01 \n",
+      "Not working ppi5k, rotate logi 256: 0.01 \n",
+      "Not working ppi5k, rotate logi 512: 0.01 \n",
+      "Not working ppi5k, rotate logi 128: 0.005 \n",
+      "Not working ppi5k, rotate logi 256: 0.005 \n",
+      "Not working ppi5k, rotate logi 512: 0.005 \n",
+      "Not working ppi5k, rotate logi 128: 0.001 \n",
+      "Not working ppi5k, rotate logi 256: 0.001 \n",
+      "Not working ppi5k, rotate logi 512: 0.001 \n",
+      "Not working ppi5k, rotate rect 128: 0.01 \n",
+      "Not working ppi5k, rotate rect 256: 0.01 \n",
+      "Not working ppi5k, rotate rect 512: 0.01 \n",
+      "Not working ppi5k, rotate rect 128: 0.005 \n",
+      "Not working ppi5k, rotate rect 256: 0.005 \n",
+      "Not working ppi5k, rotate rect 512: 0.005 \n",
+      "Not working ppi5k, rotate rect 128: 0.001 \n",
+      "Not working ppi5k, rotate rect 256: 0.001 \n",
+      "Not working ppi5k, rotate rect 512: 0.001 \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "                    "
+   ]
   }
  ],
  "metadata": {
