update psl baseline

--- a/notebooks/test_train_unc.ipynb
+++ b/notebooks/test_train_unc.ipynb
@@ -29,7 +29,7 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "\n",
     "model = 'distmult'\n",
     "dataset = 'cn15k'\n",
